--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 50px 20px 20px 20px;
+    margin-bottom: 15px;
 }
 
 .screen-header__title
@@ -12,7 +13,28 @@
     font-weight: 600;
 }
 
+.screen-header__icons
+{
+    position: relative;
+}
+
 .screen-header__icons span
 {
     margin-left: 25px;
+}
+
+.screen-reddot
+{
+    position: absolute;
+    left: 70px;
+    bottom: 18px;
+
+    background-color: tomato;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
