--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -7,6 +7,7 @@
     background-color: #fafafa;
     padding: 15px 0px;
     margin-bottom: 15px;
+    margin-top: -15px;
     font-size: 17px;
 }
 
@@ -33,7 +34,7 @@
 .friends-screen_channel
 {
     margin-top: 20px;
-    border-top: 1px solid rgba(0,0,0,0.2);
+    border-top: var(--main-border);
     padding-top: 15px;
 }
 
@@ -43,5 +44,5 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: rgba(0, 0, 0, 0.5);
+    color: var(--main-color);
 }
