--- a/css/variables.css
+++ b/css/variables.css
@@ -2,4 +2,6 @@
 {
     --yellow: #fae100;
     --horizontal-space: 20px;
+    --main-border: 1px solid rgba(0,0,0,0.2);
+    --main-color: rgba(0,0,0,0.5);
 }
