--- a/css/components/user-components.css
+++ b/css/components/user-components.css
@@ -50,6 +50,26 @@
     margin-top: 8px;
     font-size: 17px;
     color: rgba(0, 0, 0, 0.5);
+
+    position: relative;
+}
+
+.user-component__exclamation
+{
+    display: block;
+    text-align: center;
+    border: 1.2px solid red;
+    border-radius: 50%;
+    width: 14px;
+    height: 14px;
+
+    font-size: 12.5px;
+    color: red;
+    opacity: 0.8;
+
+    position: absolute;
+    bottom: -1px;
+    left: 119.5px;
 }
 
 .user-component__column:last-child
