--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,13 @@
 @import "components/screen-header.css";
 @import "components/user-components.css";
 @import "components/badge.css";
+@import "components/icon-raw.css";
 
 /*Screens*/
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
+@import "screens/more.css";
 
 body
 {
@@ -22,4 +24,12 @@ body
 .main-screen
 {
     padding: 0px var(--horizontal-space);
+}
+
+.divider
+{
+    height: 0.7px;
+    margin: 15px 0px;
+
+    background-color: rgba(0, 0, 0, 0.1);
 }
