--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -26,6 +26,26 @@
 
     left: 15px;
     bottom: 15px;
+
+    animation: notificationAnimation 2s ease-in-out infinite;
+}
+
+@keyframes notificationAnimation
+{
+    0%
+    {
+        transform: none;
+    }
+
+    50%
+    {
+        transform: translateY(-5px) rotateY(360deg);
+    }
+
+    100%
+    {
+        transform: none;
+    }
 }
 
 .nav__red-dot
@@ -42,4 +62,38 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.nav__btn
+{
+    transform: translateY(50px);
+    opacity: 0;
+    animation: appearBtnAnimation 0.6s cubic-bezier(0.42, 0, 0.56, 1.35) forwards;
+}
+
+.nav__btn:nth-child(2)
+{
+    animation-delay: 0.3s;
+}
+
+.nav__btn:nth-child(3)
+{
+    animation-delay: 0.6s;
+}
+
+.nav__btn:nth-child(4)
+{
+    animation-delay: 0.9s;
+}
+@keyframes appearBtnAnimation
+{
+    0%
+    {
+    }
+
+    100%
+    {
+        transform: translateY(0px);
+        opacity: 1;
+    }
 }
