--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -46,3 +46,36 @@
     justify-content: space-between;
     color: var(--main-color);
 }
+
+@keyframes hideSplashScreen
+{
+    0%
+    {
+        opacity: 1;
+    }
+    100%
+    {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+#splash-screen
+{
+    background-color: var(--yellow);
+
+    position: absolute;
+    top: 0;
+
+    height: 100vh;
+    width: 100vw;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size:122px;
+
+    animation: hideSplashScreen 0.4s ease-in-out forwards;
+    animation-delay: 1.5s;
+}
